# RAG-Movies

./: .gitignore  Dockerfile  LICENSE  README.md  compose-dev.yaml  deploy.sh  main.py  pyproject.toml  ruff.toml  run_retriever_eval.py
.github/workflows/: format_and_test.yml  test.yml
app/: app.py
app/src/: pipeline.py  utils.py
app/src/data/: config.py  data_preparation.py
app/src/generator/: llm_generator.py  prompts.py
app/src/retriever/: config.py  embedder.py
notebooks/: data_look.ipynb  test_transformers.ipynb
src/: settings.py
src/data/: config.py
src/generator/: config.py  llm_generator.py  prompts.py
src/retriever/: config.py  eval.py  retriever.py
